k8s/network-policies/allow-argocd-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  name: allow-argocd-access
  namespace: default
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: argocd
  podSelector:
    matchLabels:
      app: devops-portfolio-api
  policyTypes:
  - Egress
